# squadleader

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTES.md  README.md  TODO.md
crates/core/: .gitignore  Cargo.toml
crates/core/src/: lib.rs  main.rs
crates/scenario/: Cargo.toml  squad.json
crates/scenario/src/: main.rs
