[package]
name = "squadleader"
version = "0.0.1" #:version
authors = ["CryptoPatrick <cryptopatrick@gmail.com>"]
description = """
A type system and rule engine to model small unit infantry combat.
"""
documentation = "https://github.com/CryptoPatrick/squadleader"
homepage = "https://github.com/CryptoPatrick/squadleader"
repository = "https://github.com/CryptoPatrick/squadleader"
keywords = ["ruleengine", "game", "typesystem", "modeling", "simulation"]
categories = ["game-utils"]
license = "Unlicense OR MIT"
exclude = ["/.github/", "/ci/", "/pkg/brew", "/benchsuite/", "/scripts/"]
autotests = false
edition = "2021"
rust-version = "1.72"

[dependencies]
