[package]
name = "squadleader"
version = "0.0.2" #:version
authors = ["CryptoPatrick <cryptopatrick@gmail.com>"]
description = """
A type system and rule engine to model small unit infantry combat.
"""
documentation = "https://github.com/CryptoPatrick/squadleader"
homepage = "https://github.com/CryptoPatrick/squadleader"
repository = "https://github.com/CryptoPatrick/squadleader"
keywords = ["games", "game-engine", "modeling", "simulation"]
categories = ["game-development"]
license = "Unlicense OR MIT"
exclude = ["/.github/", "/ci/", "/pkg/brew", "/benchsuite/", "/scripts/"]
autotests = false
edition = "2021"
rust-version = "1.72"

[dependencies]

[workspaces]
# postit: to create a package without git: carg new --vcs none --lib <name>
# postit: to only build a specific package: cargo -p crates/core 
# postit: running `cargo build` from the root will build all packages and put
#   the result in a `target` folder at root.

members = ["crates/core", "crates/scenario"]
